# ia-2024

./: azure_container_apps_dynamic_sessions_data_analyst.ipynb
agent-test/: agent.py  server.py
agent-test/client/: client.py
agent-test/tools/: events_api.py  word_counter.py
chatbot-project/chatbot/: README.md  pyproject.toml
chatbot-project/chatbot/app/: server.py
chatbot-project/chatbot/chains/: qa.py
chatbot-project/chatbot/resources/transportation/: info.xlsx
db-project/text-to-sql/: README.md
db-project/ui/js/: index.js
example-project/text-to-sql/: pyproject.toml
example-project/text-to-sql/app/: server.py
example-project/text-to-sql/chains/: text_to_sql_chain.py
example-project/ui/: index.html
llama2-test/: llm.py
text-to-sql/: Chinook.db  README.md  sql-agent-sql-server.py  sql-sql-server.py  sql-sqlite.py
text-to-sql-with-mysql/: sql-agent.py
vectors/: pdf_query.py  txt_query.py
